fix scrollbar issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,7 @@ a.button:hover
   margin-top:5px;
   text-align: center;
   height: min-content;
+  margin-bottom: 20px;
 }
 
 .contentBox, .contentBoxDelay
@@ -152,7 +153,7 @@ a.button:hover
   padding: 0;
   height: 0;
   position:absolute;
-  /*display: block;*/
+  display:none;
 }
 
 .contentBoxDelay
@@ -160,7 +161,7 @@ a.button:hover
   animation-delay: 0.25s;
   padding-top: inherit;
   padding-bottom: inherit;
-  height: auto;
+  height: inherit;
   /*min-height: 90%;*/
 }
 
@@ -181,7 +182,6 @@ a.button:hover
   display: block;
   margin-left: auto;
   margin-right: auto;
-  /*width : auto;*/
   height: auto;
   min-width: 150px;
   width: 20%;
@@ -201,7 +201,7 @@ a.button:hover
 {
   max-width: 100%;
   width: 550px;
-  border-radius: 5px;
+  border-radius: 20px;
 }
 
 #tagline
